--- a/fileReaderTask/index.html
+++ b/fileReaderTask/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <input type="file" id="files" name="files[]" multiple>
+    <div class="error"></div>
     <div class="basic-info">
         <div class="name"></div>
         <div class="surname"></div>
@@ -30,9 +32,7 @@
 
         </ul>
     </div>
-    <script src="script.js">
-       
-    </script>
+    <script src="main.js"></script>
 </body>
 
 </html>
